Improve `resume.markdown`, `site-logo.png`, `favicon.png`

--- a/_sass/_toolbar.scss
+++ b/_sass/_toolbar.scss
@@ -10,6 +10,9 @@
 }
 
 #site-navigation-menu-toggle-container {
+  @media screen and (orientation: portrait) {
+    display: none;
+  }
   float: left;
 }
 
