--- a/_sass/_site-navigation.scss
+++ b/_sass/_site-navigation.scss
@@ -46,13 +46,13 @@ a.button {//the image inside should define the size of the button, not the <a> e
   width: 13em;//scale site-logo
 
   #site-logo {
-    height: 5em;
+    height: 4.6em;
     overflow: hidden;
-    margin-bottom: $spacing-unit-em / 0.75;
+    margin-bottom: $spacing-unit-em;
   
     img {
       position: relative;
-      top: -1em;
+      top: -2.3em;
       opacity: 0.93;
     }
   }
